@@ -4,24 +4,28 @@ import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 
-import com.mongodb.lang.Nullable;
-
 import java.util.Collection;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Collections;
 
 public class JwtRoleConverter implements Converter<Jwt, Collection<SimpleGrantedAuthority>> {
 
     @Override
-    @Nullable
     public Collection<SimpleGrantedAuthority> convert(Jwt jwt) {
-        List<String> roles = jwt.getClaimAsStringList("user_roles");
-        if (roles == null)
-            roles = List.of();
+        var realmAccess = jwt.getClaimAsMap("https://2f124d.ch/user_roles");
 
-        // macht aus TEACHER -> ROLE_TEACHER
+        if (realmAccess == null || realmAccess.isEmpty()) {
+            return Collections.emptyList(); // statt null
+        }
+
+        @SuppressWarnings("unchecked")
+        var roles = (Collection<String>) realmAccess.get("roles");
+
+        if (roles == null) {
+            return Collections.emptyList(); // statt null
+        }
+
         return roles.stream()
-                .map(r -> new SimpleGrantedAuthority("ROLE_" + r))
-                .collect(Collectors.toList());
+                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                .toList();
     }
 }
